<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">ReGreen</string>
    <string name="app_heading">Regreen</string>

    <!--Facebook-->
    <!--343166299512838-->
    <string name="facebook_app_id">2077062842321248</string>
    <string name="fb_login_protocol_scheme">fb343166299512838</string>


    <!--SignIn SCREEN-->
    <string name="signin_screen">Sign In</string>
    <string name="do_not_have_account" tools:ignore="StringEscaping">Don't have any account? <u>Sign up</u></string>
    <string name="forgot_password">Forgot password ?</string>

    <!--VERIFICATION SCREEN-->
    <string name="signup_text">Sign Up</string>
    <string name="signup_next">Next</string>
    <string name="signup_social">Sign up with</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="explore">Explore affiliated nurseries for plants</string>
    <string name="or_container">Or</string>
    <string name="explore_text">Explore</string>
    <string name="nursery_text"><u>Nurseries</u></string>
    <string name="and_text">And</string>
    <string name="articles_text"><u>Articles</u></string>

    <string name="invalid_otp">Invalid OTP</string>

    <!--VERIFICATION SCREEN-->
    <string name="verification_screen">Verification</string>
    <string name="verify_text">Verify</string>
    <string name="resend">Resend Code</string>
    <string name="resendinfo">Did\'not receive code?</string>

    <!--    HOMESCREEN-->
    <string name="homescreen_title">Home</string>
    <string name="total_points">Total Points</string>
    <string name="plants_nursery">Plants &amp; Nursery</string>
    <string name="nursery">Nursery</string>

    <string name="plants">Plants</string>
    <string name="source_by">Source:</string>
    <string name="submitted_by">Submitted By:</string>

    <string name="plantsavailable">Plants Available</string>
    <string name="aboutournursery">Nursery Details</string>

    <string name="nurseryname">Nursery Name</string>
    <string name="address">Address</string>
    <string name="contactname">Contact Name</string>
    <string name="contactnumber">Contact Number</string>


    <!--MENU-->
    <string name="menu_notification">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--FRAGMENTS-->
    <string name="welcome_text">Welcome to Regreen   !</string>
    <string name="get_plants_text">Get Plants</string>
    <string name="expert_panel_articles_text">Expert panel and articles</string>
    <string name="expert_panel_desc">Get various information daily &amp; ask problems about your plans to experts.</string>
    <string name="wel_10">Welcome Bonus 10&#37;</string>
    <string name="twitter_hint">twitter</string>

    <string name="skip">SKIP</string>

    <string name="first_name_error">Please enter first name.</string>

    <!--WELCOME BONUS SCREEN-->
    <string name="welcome_bonus_screen">Welcome Bonus</string>
    <string name="redeem_text">Redeem now</string>
    <string name="skip_text">SKIP</string>

    <string name="title_activity_ticket"></string>
    <string name="lbl_duration">DURATION</string>
    <string name="lbl_genre">GENRE</string>
    <string name="lbl_rating">RATING</string>
    <string name="lbl_price">PRICE</string>
    <string name="btn_buy_now">BUY NOW</string>
    <string name="btn_coming_soon">COMING SOON</string>
    <string name="msg_no_ticket_found">No ticket found. Try scanning the QR Codes from http://api.androidhive.info/qrcodes/</string>
    <string name="lbl_scan_activity">Scan QR Code</string>

    <string name="read_location_settings">Grant  permission from the settings so Reegreen can provide you location base service.</string>
    <string name="dialog_btn_settings">Settings</string>

    <string name="scan_error">Please Try Again</string>
    <string name="scan_error_2">You have already used this code.</string>
    <string name="pls_try_again">Please Try Again</string>

    <!--Congratulations-->
    <string name="finish">Finish</string>
    <string name="alert_msg">Are you sure you want to exit?</string>

    <!--PLANTS AND NURSERY-->
    <string name="plants_and_nursery">Plants &amp; Nursery</string>
    <string name="nursery_title">Nursery</string>
    <string name="nursery_not_avail">Nursery Not Available</string>
    <string name="article_not_avail">Article Not Available</string>
    <string name="no_plant_cat">No Plant Category</string>
    <string name="no_plant">No Plant</string>
    <string name="call_msg">Do you want to call?</string>

    <!--UPLOAD SCREEN-->
    <string name="upload_bill_title">Upload bill</string>
    <string name="upload_bill_heading_title">Upload your bill</string>
    <string name="upload_bill_vendor_name">Name of nursery</string>
    <string name="upload_bill_bill_no">Bill Amount</string>
    <string name="upload_bill_btn_text">Upload</string>
    <string name="string_title_upload_progressbar_">Uploading...</string>
    <string name="upload_bill_enter_bill_title">Enter amount of your bill</string>
    <string name="upload_bill_name_nursery">Name of Nursery</string>
    <string name="upload_bill_finish">Finish</string>

    <!--Get Bill-->
    <string name="gbill_not_avail">No Bill Available</string>

    <!--User Profile-->
    <string name="user_profile_title">User Profile</string>
    <string name="user_profile_save">Save</string>

    <!--EXPERTS LIST-->
    <string name="experts_title">Experts Lists</string>
    <string name="common_f_and_q">Common F&amp;Qs</string>
    <string name="pending">Pending</string>
    <string name="complete">Completed</string>
    <string name="expert">Expert</string>
    <string name="yourquestion">Your Questions</string>
    <string name="addtofaq">Add TO FAQ</string>
    <string name="addtospam">Add TO SPAM</string>

    <!--EXPERT DETAILS-->
    <string name="expert_detail_title">Home</string>

    <!--bsImagePicker Details-->
    <string name="imagepicker_multiselect_done">Done</string>
    <string name="imagepicker_multiselect_not_enough_singular">You have to select 1 more image</string>
    <string name="imagepicker_multiselect_not_enough_plural">You have to select %d more images</string>
    <string name="imagepicker_multiselect_enough_singular">You have selected 1 image</string>
    <string name="imagepicker_multiselect_enough_plural">You have selected %d images</string>
    <string name="imagepicker_multiselect_overselect">You cannot select more than %d images</string>
    <string name="imagepicker_gallery_intent_title">Select Multiple Images</string>


    <string name="tab_nursery">Nursery</string>
    <string name="tab_experts">Experts</string>
    <string name="tab_user">Questions</string>
    <string name="tab_home">Home</string>
    <string name="tab_articles">Articles</string>
    <string name="tab_rewards">Rewards</string>

    <string name="nodatafound">No Data Found</string>
    <string name="home_quote">He who does not \n understand your silence will  \n probably not understand \n your words.</string>

    <!--Plant Details-->
    <string name="plant_detail_name">Name:</string>
    <string name="plant_detail_botname">Botanical Name:</string>
    <string name="plant_detail_engname">English Name:</string>
    <string name="plant_detail_habit">Habit:</string>
    <string name="plant_detail_family">Family:</string>
    <string name="plant_detail_watering">Watering:</string>
    <string name="plant_detail_location">Location:</string>
    <string name="plant_detail_use">Use:</string>

</resources>
