<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/common_gray">

    <LinearLayout
        android:id="@+id/expert_f_and_q"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/rlfaq"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/profile_arrow_orange"
            android:padding="@dimen/dimen_10">

            <TextView
                android:id="@+id/txt_expert_f_and_q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="11dp"
                android:text="@string/common_f_and_q"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imgExpertArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="11dp"
                android:src="@mipmap/move_nex" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llexpertlist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtexpert"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/expert" />

            <TextView
                android:id="@+id/txtyourquestion"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/yourquestion" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lluserlist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10"
            android:visibility="gone"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtpending"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/pending" />

            <TextView
                android:id="@+id/txtcomplete"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/complete" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/expert_f_and_q"
        android:layout_marginTop="@dimen/dimen_10"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewExperts"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/dimen_10"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtnotfound"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
