<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@mipmap/tut_bg"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_relativelayout_allpadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_bonus_screen"
                    android:textSize="17sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical"
            >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".18">
            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <ImageView
                    android:id="@+id/imgWelcomeBonus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/welcome_margin"
                    android:layout_weight="1"
                    android:padding="@dimen/login_relativelayout_allpadding"
                    android:src="@mipmap/tut_1" />
                <TextView
                    android:id="@+id/txtSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/skip_top_margin"
                    android:layout_marginRight="@dimen/skip_right_margin"
                    android:layout_gravity="right|top"
                    android:text="@string/skip"
                    android:textSize="@dimen/skip_size"
                    android:textColor="@android:color/black">

                </TextView>
            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/btnRedeemContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_btn_height"
                android:layout_marginLeft="@dimen/welcome_margin"
                android:layout_marginRight="@dimen/welcome_margin"
                android:background="@drawable/signin_signup_button"
                android:layout_below="@id/edtConfirmPassword">

                <TextView
                    android:id="@+id/txtRedeem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/redeem_text"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/fontsize_login"
                    android:textColor="@color/white"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>