<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="#70000000"
            android:orientation="vertical">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/mapView2"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_main_container_height"
                tools:context="com.kf.regreen.regreenproject.Activities.MapMainActivity" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtNurseryNameMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/image_height"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="@dimen/reward_size" />

        <TextView
            android:id="@+id/txtNurseryAddMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNurseryNameMap"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margins"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="@dimen/amt_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <!-- <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black50"></View>-->

        <LinearLayout
            android:id="@+id/llplantheader"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtplantsavailable"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/plantsavailable" />
<!--
            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/black50"></View>-->

            <TextView
                android:id="@+id/txtabout"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/aboutournursery" />

        </LinearLayout>

      <!--  <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black50"></View>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llplantavailable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/mContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </RelativeLayout>

            <TextView
                android:id="@+id/txtnodatafound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@android:color/black"
                android:textSize="@dimen/amt_text_size"
                android:visibility="gone" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/svabout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llabout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:elevation="5dp"
                    app:cardCornerRadius="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="vertical"
                        android:padding="@dimen/dimen_10">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/nurseryname"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtnurseryname"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginTop="5dp"
                            android:text="@string/nurseryname" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:elevation="5dp"
                    app:cardCornerRadius="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="vertical"
                        android:padding="@dimen/dimen_10">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/address"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtaddress"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginTop="5dp"
                            android:text="@string/address" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:elevation="5dp"
                    app:cardCornerRadius="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="vertical"
                        android:padding="@dimen/dimen_10">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/contactname"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtcontactname"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginTop="5dp"
                            android:text="@string/contactname" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:elevation="5dp"
                    app:cardCornerRadius="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="vertical"
                        android:padding="@dimen/dimen_10">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/contactnumber"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtcontactno"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginTop="5dp"
                            android:text="@string/contactnumber" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout><!-- <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewMap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent" />-->

</LinearLayout>
