<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/tut_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarVeri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MyToolTheme">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Verification"
                android:textColor="@android:color/white" />
        </android.support.v7.widget.Toolbar>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/emailpasswordContainerSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20"
        android:background="@drawable/bg"
        android:paddingBottom="@dimen/dimen_20">

        <ImageView
            android:id="@+id/reGreenLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/signup_bottom_margin"
            android:src="@mipmap/sign_in_logo" />

        <com.chaos.view.PinView
            android:id="@+id/edtVerificationCode"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reGreenLogo"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corner_button_common"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/fontsize_login"
            app:itemCount="6"
            app:lineColor="@android:color/holo_blue_dark"
            app:viewType="line" />

        <LinearLayout
            android:id="@+id/llresend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtVerificationCode"
            android:layout_marginTop="@dimen/dimen_20"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llresendcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resendinfo"
                    android:textSize="@dimen/fontsize_login" />

                <TextView
                    android:id="@+id/txtResend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend"
                    android:textColor="@color/buttons_color"
                    android:textSize="@dimen/fontsize_login" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="30"
                android:textColor="@color/buttons_color"
                android:textSize="@dimen/dimen_20" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_height"
            android:layout_below="@id/llresend"
            android:layout_marginLeft="@dimen/login_edittext_margin"
            android:layout_marginRight="@dimen/login_edittext_margin"
            android:layout_marginTop="@dimen/dimen_40"
            android:background="@drawable/signin_signup_button">

            <TextView
                android:id="@+id/txtVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/verify_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/fontsize_login" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>